Update Cleansing Data with commas and many values in the column.ipynb

--- a/Cleansing Data with commas and many values in the column.ipynb
+++ b/Cleansing Data with commas and many values in the column.ipynb
@@ -95,19 +95,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def xxx_change(w,x,y,z):\n",
+    "def col_change(w,x,y,z):\n",
     "    \"\"\"\n",
     "    w, x, y, z = str\n",
     "    \n",
-    "    if you have value x included in column w, you want to change the y value in column [xxx] to z\n",
-    "    change the xxx value to value you want\n",
+    "    if you have value x included in column w, you want to change the y value in column [col] to z\n",
+    "    change the col value to value you want\n",
     "    \n",
     "    \"\"\"\n",
     "    new_df = df[df[w].str.contains(x, na=False)]\n",
     "\n",
     "    new_idx = new_df.index.tolist()\n",
     "\n",
-    "    new_list = new_df[xxx].tolist()\n",
+    "    new_list = new_df[col].tolist()\n",
     "\n",
     "    for i, j in enumerate(new_list):\n",
     "        if isNaN(j):\n",
@@ -118,7 +118,7 @@
     "            new_list[i] = j.replace(y,z)\n",
     "        \n",
     "    for i, j in zip(new_idx, new_list):\n",
-    "        df.loc[i, xxx] = j"
+    "        df.loc[i, col] = j"
    ]
   },
   {
@@ -148,18 +148,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def yyy_add(x,y,z):\n",
+    "def col_add(x,y,z):\n",
     "    \"\"\"\n",
     "    x, y, z = str\n",
     "    \n",
-    "    if you have y value in column x, you want to add z value to the cell in column yyy\n",
-    "    change the yyy value to the value you want\n",
+    "    if you have y value in column x, you want to add z value to the cell in column [col]\n",
+    "    change the col value to the value you want\n",
     "    \"\"\"\n",
     "    new_df = df[df[x].str.contains(y, na=False)]\n",
     "\n",
     "    new_idx = new_df.index.tolist()\n",
     "\n",
-    "    new_list = new_df[yyy].tolist()\n",
+    "    new_list = new_df[col].tolist()\n",
     "\n",
     "    \n",
     "    for i, j in enumerate(new_list):\n",
@@ -173,7 +173,7 @@
     "        print(\"j: {0}, new list: {1}\".format(j, new_list[i]))\n",
     "        \n",
     "    for i, j in zip(new_idx, new_list):\n",
-    "        df.loc[i, yyy] = j\n",
+    "        df.loc[i, col] = j\n",
     "    "
    ]
   },
@@ -186,7 +186,7 @@
    "source": [
     "# Run\n",
     "for i in range(len(op_add)):\n",
-    "    yyy_add(yyy_add[i][0], yyy_add[i][1], yyy_add[i][2])"
+    "    col_add(col_add[i][0], yyy_col[i][1], yyy_col[i][2])"
    ]
   },
   {
