Update Cleansing Data with commas and many values in the column.ipynb

--- a/Cleansing Data with commas and many values in the column.ipynb
+++ b/Cleansing Data with commas and many values in the column.ipynb
@@ -130,7 +130,7 @@
    "source": [
     "# Run\n",
     "for i in range(len(edit)):\n",
-    "    xxx_change(edit[i][0], edit[i][1], edit[i][2], edit[i][3])"
+    "    col_change(edit[i][0], edit[i][1], edit[i][2], edit[i][3])"
    ]
   },
   {
